# 2025DriverStationInterface

./: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.vue  fieldConstants.ts  renderTypes.ts  rendering.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: IPAddressMode.ts  NTRegisterPathMessage.ts  NTSetValueMessage.ts  NTStatusUpdateMessage.ts  NTUpdateMessage.ts  NTValueUpdateMessage.ts  NetworkSettingsUpdateMessage.ts
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  networking.rs
src-tauri/src/networktables/: client.rs  client_config.rs  error.rs  message_type.rs  messages.rs  mod.rs  readme.md  subscription.rs  topic.rs
src/lib/: StatusBar.vue  TitleBar.vue  networkTables.ts  rendering.ts  settings.ts  units.ts
src/lib/constants/: fieldConstants.ts  robotConstants.ts
src/lib/nt4/: index.ts  msgpack.d.ts  msgpack.js  nt4.ts
src/lib/types/: autoTypes.ts  renderTypes.ts
src/pages/: AutoRoutinesPage.vue  CompetitionTargetSelectionPage.vue  SettingsPage.vue
src/pages/autoRoutines/: AutoRoutine.vue
