[package]
name = "wave-driver-station-interface"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wave_driver_station_interface_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = "10.1.0"
simple-mdns = { version = "0.6.2", features = ["sync"] }
tokio = { version = "1.43.0", features = ["full"] }
parking_lot = "0.12.3"
futures-util = "0.3.31"
thiserror = "2.0.11"
rand = "0.8.5"
rmp = "0.8.14"
rmp-serde = "1.3.0"
rmpv = { version = "1.3.0", features = ["with-serde"] }
tokio-tungstenite = "0.26.1"
no-panic = "0.1.33"
